--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#fafafa">
-    <meta name="color-scheme" content="light dark">
+    <meta name="color-scheme" content="light">
     <title>Upwork Proposal Generator</title>
     
     <!-- Load Tailwind CSS first -->
@@ -122,15 +121,19 @@
     <script>
       (function() {
         try {
-          const savedTheme = localStorage.getItem('theme');
-          const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-          // Default to light unless explicitly dark or system preference is dark AND no saved preference
-          if (savedTheme === 'dark' || (!savedTheme && prefersDark)) {
+          var savedTheme = localStorage.getItem('theme');
+          var metaThemeColor = document.querySelector('meta[name="theme-color"]');
+          var metaColorScheme = document.querySelector('meta[name="color-scheme"]');
+          
+          if (savedTheme === 'dark') {
             document.documentElement.classList.add('dark');
-            document.querySelector('meta[name="theme-color"]').setAttribute('content', '#09090b');
+            if (metaThemeColor) metaThemeColor.setAttribute('content', '#09090b');
+            if (metaColorScheme) metaColorScheme.setAttribute('content', 'dark');
           } else {
+            // Explicitly default to light to prevent system bleed-through
             document.documentElement.classList.remove('dark');
-            document.querySelector('meta[name="theme-color"]').setAttribute('content', '#fafafa');
+            if (metaThemeColor) metaThemeColor.setAttribute('content', '#fafafa');
+            if (metaColorScheme) metaColorScheme.setAttribute('content', 'light');
           }
         } catch (e) {}
       })();
